<resources>
    <string name="app_name">WeatherInfo</string>
    <string name="api_key">64f35fc9dd7da2b5094e25cb09aef556</string>

    <!-- Main weather information    -->
    <string name="humidity_p">Humidity:</string>
    <string name="humidity">Humidity</string>

    <string name="pressure_p">Pressure:</string>
    <string name="pressure">Pressure</string>

    <string name="temp_p">Temperature:</string>
    <string name="temp">Temperature</string>

    <string name="max_temp_p">Max temperature:</string>
    <string name="max_temp">Max temperature</string>

    <string name="min_temp_p">Min temperature:</string>
    <string name="min_temp">Min temperature</string>

    <string name="city_name_p">City name:</string>
    <string name="city_name">City name</string>


    <string name="item_settings">Settings</string>
    <string name="item_about_app">AboutApp</string>

    <string-array name="array_units">
        <item id="@+id/unit_metric">metric</item>
        <item id="@+id/unit_imperial">imperial</item>
    </string-array>

    <string name="defaul_city">Moscow</string>
    <string name="defaul_units">metric</string>
</resources>
